--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/0xthrpw/ssdk#readme",
   "dependencies": {
+    "xhr2-cookies": "0xthrpw/xhr2-cookies",
+    "@rarible/sdk": "^0.7.28",
+    "@rarible/sdk-wallet": "^0.7.28",
     "axios": "^0.24.0",
     "ethers": "^5.5.2",
     "opensea-js": "^1.2.7",
